# ADAS_CARLA

./: README.md  config.py  main.py  requirements.txt  run_simulation.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
adas/: __init__.py  adaptive_cruise.py  controller.py  lane_following.py  vehicle_detection.py
simulation/: __init__.py  mock_carla.py  scenarios.py  vehicle_sim.py  visualization.py  world.py
src/: README.md
src/space_arm_control/: CMakeLists.txt  package.xml
src/space_arm_control/config/: controllers.yaml  mpc_params.yaml
src/space_arm_control/launch/: mpc_control.launch.py
src/space_arm_control/space_arm_control/: mpc_solver.py
src/space_arm_control/src/: joint_space_mpc.py  mpc_controller_node.py
src/space_arm_description/: CMakeLists.txt  package.xml
src/space_arm_description/config/: joint_limits.yaml
src/space_arm_description/launch/: display.launch.py
src/space_arm_description/rviz/: display.rviz
src/space_arm_description/urdf/: arm_macros.xacro  camera.xacro  gazebo.xacro  materials.xacro  space_arm.urdf.xacro
src/space_arm_simulation/: CMakeLists.txt  package.xml
src/space_arm_simulation/config/: simulation_params.yaml
src/space_arm_simulation/launch/: full_simulation.launch.py  gazebo.launch.py  spawn_arm.launch.py
src/space_arm_simulation/worlds/: space_environment.world
src/space_arm_vision/: CMakeLists.txt  package.xml
src/space_arm_vision/config/: vision_params.yaml
src/space_arm_vision/launch/: vision.launch.py
src/space_arm_vision/src/: target_detector_node.py  visual_servoing_node.py
utils/: __init__.py  event_bus.py  helpers.py
