<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>space_arm_control</name>
  <version>0.1.0</version>
  <description>MPC-based controller for the space robotic arm</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>effort_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
